# fadroma-example

./: .env  .gitignore  .gitmodules  .npmrc  Cargo.toml  README.md  app.ts  index.css  index.html  package.json  pnpm-lock.yaml  project.ts  vite.config.ts
api/: api.ts  package.json
schema-contract/: Cargo.toml  schema-contract.rs
