# Crates in workspace
[workspace]
members = [
  # Library crates from Fadroma:
  "fadroma/crates/*",
  # Contract crates:
  "fadroma/examples/echo",
  "fadroma/examples/kv",
]

# Release profile
[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
